2005-09-01  Jakub Jelinek  <jakub@redhat.com>

	PR rtl-optimization/23478
	* regs.h (reg_info): Add throw_calls_crossed.
	(REG_N_THROWING_CALLS_CROSSED): Define.
	* flow.c (allocate_reg_life_data): Initialize
	REG_N_THROWING_CALLS_CROSSED.
	(propagate_one_insn, attempt_auto_inc): Update
	REG_N_THROWING_CALLS_CROSSED.
	* local-alloc.c (struct qty): Add n_throwing_calls_crossed field.
	(alloc_qty): Initialize it.
	(update_equiv_regs): Clear REG_N_THROWING_CALLS_CROSSED.
	(combine_regs): Combine also n_throwing_calls_crossed fields.
	(find_free_reg): Don't attempt to caller-save pseudos crossing
	calls that might throw.
	* global.c (struct allocno): Add throwing_calls_crossed field.
	(global_alloc): Initialize throwing_calls_crossed.
	(find_reg): Don't attempt to caller-save pseudos crossing calls that
	might throw.

2005-09-01  Richard Earnshaw  <richard.earnshaw@arm.com>

	PR rtl-optimization/17810 target/15342
	* regrename.c: Fix polluted patch in previous change.

2005-09-01  Richard Earnshaw  <richard.earnshaw@arm.com>

	PR rtl-optimization/17810
	Backport
	2004-11-04  Richard Sandiford  <rsandifo@redhat.com>
	PR target/15342
	* regrename.c (scan_rtx): Treat the destinations of SETs and CLOBBERs
	as OP_INOUT if the instruction is predicated.

2005-08-31  David Edelsohn  <edelsohn@gnu.org>

        PR target/23539
	Backport from mainline:

	2005-08-27  David Edelsohn  <edelsohn@gnu.org>
        * config/rs6000/rs6000.c (expand_block_move): Use HImode when
        bytes >= 2 not bytes == 2.

2005-08-21  Jakub Jelinek  <jakub@redhat.com>

	* simplify-rtx.c (simplify_immed_subreg) <case CONST_DOUBLE>: Only
	clear up to elem_bitsize bits, not max_bitsize.

2005-07-20  Steve Ellcey  <sje@cup.hp.com>

	PR target/21841
	* doc/invoke.texi (-mgnu-ld): Update description.
	(-mhp-ld): Ditto.

2005-08-09  Paolo Bonzini  <bonzini@gnu.org>

	PR rtl-optimization/17860
	* loop.c (check_dbra_loop): Do not try to use an end condition
	like "i != 0" in the reversed loop.
